--- a/aop/pom.xml
+++ b/aop/pom.xml
@@ -20,7 +20,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>sirona-parent</artifactId>
+    <artifactId>sirona</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
