--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <groupId>org.apache.sirona</groupId>
-  <artifactId>sirona-parent</artifactId>
+  <artifactId>sirona</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Sirona (Incubator)</name>
@@ -319,7 +319,7 @@
         <artifactId>maven-pmd-plugin</artifactId>
         <version>2.3</version>
         <configuration>
-          <targetJdk>${maven.compile.target}</targetJdk>
+          <targetJdk>${maven.compiler.target}</targetJdk>
         </configuration>
       </plugin>
       <plugin>
@@ -327,18 +327,6 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.9.1</version>
         <inherited>false</inherited>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.5.2</version>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <report></report>
-            </reports>
-          </reportSet>
-        </reportSets>
       </plugin>
     </plugins>
   </reporting>
