--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>sirona-cdi</artifactId>
-  <name>Commons Monitoring (Sandbox) :: CDI Integration</name>
+  <name>Apache Sirona Incubator :: CDI Integration</name>
 
   <dependencies>
     <dependency>
