--- a/collector/pom.xml
+++ b/collector/pom.xml
@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>sirona-collector</artifactId>
-  <name>Commons Monitoring (Sandbox) :: Collector</name>
+  <name>Apache Sirona Incubator :: Collector</name>
 
   <dependencies>
     <dependency>
