--- a/cube/pom.xml
+++ b/cube/pom.xml
@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>sirona-cube</artifactId>
-  <name>Commons Monitoring (Sandbox) :: Cube</name>
+  <name>Apache Sirona Incubator :: Cube</name>
   <description>A DataStore for https://github.com/square/cube</description>
 
   <dependencies>
