--- a/graphite/pom.xml
+++ b/graphite/pom.xml
@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>sirona-graphite</artifactId>
-  <name>Commons Monitoring (Sandbox) :: Graphite</name>
+  <name>Apache Sirona Incubator :: Graphite</name>
 
   <dependencies>
     <dependency>
