--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -25,7 +25,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>sirona-jdbc</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Commons Monitoring (Sandbox) :: JDBC</name>
+  <name>Apache Sirona Incubator :: JDBC</name>
 
   <properties>
     <!-- Java6 required for JDBC 4 -->
