--- a/reporting/pom.xml
+++ b/reporting/pom.xml
@@ -26,7 +26,7 @@
   </parent>
 
   <artifactId>sirona-reporting</artifactId>
-  <name>Commons Monitoring (Sandbox) :: Reporting</name>
+  <name>Apache Sirona Incubator :: Reporting</name>
   <packaging>war</packaging>
 
   <properties>
