--- a/reporting/pom.xml
+++ b/reporting/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>sirona</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1-incubating-SNAPSHOT</version>
   </parent>
 
   <artifactId>sirona-reporting</artifactId>
