--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>sirona</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
