--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.sirona</groupId>
     <artifactId>sirona</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1-incubating-SNAPSHOT</version>
   </parent>
 
   <artifactId>sirona-core</artifactId>
