--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -20,11 +20,11 @@
   <parent>
     <artifactId>sirona</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1-incubating-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>sirona-jdbc</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1-incubating-SNAPSHOT</version>
   <name>Apache Sirona Incubator :: JDBC</name>
 
   <properties>
