add ciManagement and issueManagement
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1534813 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,16 @@
     <url>http://svn.apache.org/viewvc/incubator/sirona/trunk/</url>
   </scm>
 
+  <ciManagement>
+    <system>jenkins</system>
+    <url>https://builds.apache.org/job/sirona/</url>
+  </ciManagement>
+
+  <issueManagement>
+    <system>jira</system>
+    <url>https://issues.apache.org/jira/browse/SIRONA</url>
+  </issueManagement>
+
   <build>
     <pluginManagement>
       <plugins>
