--- a/reporting/pom.xml
+++ b/reporting/pom.xml
@@ -149,6 +149,7 @@
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.1</version>
         <configuration>
           <port>${tomcatRunPort}</port>
           <path>${tomcatRunPath}</path>
