better way to configure cdi performance/jta interceptors. Note: config is better but we can't rely add custom interceptors anymore. Surely not an issue since it would be great in DeltaSpike rather than here.
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1535181 13f79535-47bb-0310-9956-ffa450edef68

--- a/cdi/src/test/resources/sirona.properties
+++ b/cdi/src/test/resources/sirona.properties
@@ -14,4 +14,4 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-org.apache.sirona.cdi.CommonsMonitoringExtensionTest$AutoMonitoredBean.cdi = performance
+org.apache.sirona.cdi.performance = prefix:org.apache.sirona.cdi.CommonsMonitoringExtensionTest$AutoMonitoredBean
