using sb-admin bootstrap theme - need to cleanup gui + add missing tests + add licence but committing it now to be able to not work alone anymore
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1537021 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,7 @@
             <exclude>**/resources/js/*.js</exclude>
             <exclude>**/resources/css/*.css</exclude>
             <exclude>**/META-INF/services/*</exclude>
+            <exclude>**/resources/resources/**/*</exclude>
           </excludes>
         </configuration>
         <executions>
