fixing collector module + making of it a war (+ jar) + moving some stuff for easier usage (Collector*Store in core to let the gui handle it a bit more later + JVM gauges in core to allow to activate/deactivate it)
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1538417 13f79535-47bb-0310-9956-ffa450edef68

--- a/collector/src/main/resources/collector-sirona.properties
+++ b/collector/src/main/resources/collector-sirona.properties
@@ -14,9 +14,10 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
+
+# collector data store to aggregate data
 org.apache.sirona.store.DataStoreFactory = org.apache.sirona.collector.server.store.CollectorDataStoreFactory
 
-org.apache.sirona.cube.CubeBuilder.collector = http://localhost:1234
-org.apache.sirona.cube.CubeBuilder.marker = local
-
+# web module doesn't need to register locally otherwise locally it will not set a marker and all will fail
+org.apache.sirona.web.activated = false
 org.apache.sirona.core.gauge.activated = false
