--- a/cube/src/test/resources/sirona.properties
+++ b/cube/src/test/resources/sirona.properties
@@ -18,3 +18,4 @@ org.apache.sirona.store.DataStoreFactory = org.apache.sirona.cube.CubeDataStoreF
 org.apache.sirona.cube.period = 100
 org.apache.sirona.cube.CubeBuilder.collector = http://localhost:1234/1.0/event/put
 
+org.apache.sirona.core.gauge.activated = false
