--- a/graphite/src/test/resources/sirona.properties
+++ b/graphite/src/test/resources/sirona.properties
@@ -20,3 +20,5 @@ org.apache.sirona.graphite.period = 125
 
 org.apache.sirona.graphite.GraphiteBuilder.address = localhost
 org.apache.sirona.graphite.GraphiteBuilder.port = 1234
+
+org.apache.sirona.core.gauge.activated = false
