--- a/collector/pom.xml
+++ b/collector/pom.xml
@@ -28,6 +28,7 @@
 
   <artifactId>sirona-collector</artifactId>
   <name>Apache Sirona Incubator :: Collector</name>
+  <packaging>war</packaging>
 
   <dependencies>
     <dependency>
@@ -38,6 +39,10 @@
     <dependency>
       <groupId>org.apache.sirona</groupId>
       <artifactId>sirona-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-reporting</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.jaxrs</groupId>
