--- a/pom.xml
+++ b/pom.xml
@@ -255,7 +255,15 @@
         </executions>
       </plugin>
 
-
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <archiveClasses>true</archiveClasses>
+          <attachClasses>true</attachClasses>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
