printing data by node for gauges by default in reporting view if in collector mode
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1538442 13f79535-47bb-0310-9956-ffa450edef68

--- a/collector/pom.xml
+++ b/collector/pom.xml
@@ -43,6 +43,9 @@
     <dependency>
       <groupId>org.apache.sirona</groupId>
       <artifactId>sirona-reporting</artifactId>
+      <version>${project.version}</version>
+      <classifier>classes</classifier>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.jaxrs</groupId>
