--- a/collector/src/main/resources/collector-sirona.properties
+++ b/collector/src/main/resources/collector-sirona.properties
@@ -21,3 +21,7 @@ org.apache.sirona.store.DataStoreFactory = org.apache.sirona.collector.server.st
 # web module doesn't need to register locally otherwise locally it will not set a marker and all will fail
 org.apache.sirona.web.activated = false
 org.apache.sirona.core.gauge.activated = false
+
+# deactivate plugins which are local since we can only rely on gauges and counters here
+JMX.activated = false
+Threads.activated = false
