updating collector to support new reporting pages (gauges typically)
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1538552 13f79535-47bb-0310-9956-ffa450edef68

--- a/collector/src/main/resources/collector-sirona.properties
+++ b/collector/src/main/resources/collector-sirona.properties
@@ -25,3 +25,4 @@ org.apache.sirona.core.gauge.activated = false
 # deactivate plugins which are local since we can only rely on gauges and counters here
 JMX.activated = false
 Threads.activated = false
+Web.activated = false
