adding tomee agent plugin
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1539308 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,8 @@
     <maven.compiler.target>1.6</maven.compiler.target>
 
     <tomcat.version>7.0.47</tomcat.version>
-    <arquillian.version>1.0.3.Final</arquillian.version>
+    <arquillian.version>1.0.3.Final</arquillian.version> <!-- for tomcat adapter -->
+    <openejb.version>4.5.2</openejb.version>
   </properties>
 
   <modules>
