--- a/server/plugins/tomee/agent/pom.xml
+++ b/server/plugins/tomee/agent/pom.xml
@@ -19,18 +19,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>sirona-server</artifactId>
+    <artifactId>sirona-tomee</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>0.1-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>sirona-plugins</artifactId>
-  <name>Apache Sirona Incubator :: Server :: Plugins</name>
-  <packaging>pom</packaging>
+  <artifactId>sirona-tomee-agent</artifactId>
+  <name>Apache Sirona Incubator :: Server :: Plugins :: TomEE :: Agent</name>
 
-  <modules>
-    <module>tomee</module>
-  </modules>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>openejb-core</artifactId>
+      <version>${openejb.version}</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 </project>
