--- a/server/plugins/tomee/pom.xml
+++ b/server/plugins/tomee/pom.xml
@@ -19,18 +19,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>sirona-server</artifactId>
+    <artifactId>sirona-plugins</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>0.1-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>sirona-plugins</artifactId>
-  <name>Apache Sirona Incubator :: Server :: Plugins</name>
+  <artifactId>sirona-tomee</artifactId>
+  <name>Apache Sirona Incubator :: Server :: Plugins :: TomEE</name>
   <packaging>pom</packaging>
 
   <modules>
-    <module>tomee</module>
+    <module>agent</module>
   </modules>
+
+  <properties>
+    <arquillian.version>1.1.1.Final</arquillian.version>
+  </properties>
 </project>
