basic agent for pulling (in webapps) - need timers on collector + a way to register an agent + doc
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1539405 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.sirona</groupId>
+        <artifactId>sirona-cube</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.sirona</groupId>
         <artifactId>sirona-aop</artifactId>
         <version>${project.version}</version>
       </dependency>
