adding registration + basic test for pull collection mode
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1539590 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/pull/pom.xml
+++ b/agent/pull/pom.xml
@@ -55,5 +55,9 @@
       <classifier>jdk15</classifier>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-codec-http</artifactId>
+    </dependency>
   </dependencies>
 </project>
