--- a/server/collector/src/main/resources/collector-sirona.properties
+++ b/server/collector/src/main/resources/collector-sirona.properties
@@ -17,3 +17,4 @@
 
 # collector data store to aggregate data
 org.apache.sirona.store.DataStoreFactory = org.apache.sirona.collector.server.store.CollectorDataStoreFactory
+org.apache.sirona.core.gauge.activated = false
