basic cassandra module structure. All is to implement
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1539707 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/store/cassandra/pom.xml
+++ b/agent/store/cassandra/pom.xml
@@ -19,20 +19,38 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>sirona-agent</artifactId>
+    <artifactId>sirona-store</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>0.1-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>sirona-store</artifactId>
-  <name>Apache Sirona Incubator :: Agent :: Store</name>
-  <packaging>pom</packaging>
+  <artifactId>sirona-cassandra</artifactId>
+  <name>Apache Sirona Incubator :: Agent :: Store :: Cassandra</name>
 
-  <modules>
-    <module>graphite</module>
-    <module>cube</module>
-    <module>cassandra</module>
-  </modules>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-collector</artifactId>
+      <classifier>classes</classifier>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hectorclient</groupId>
+      <artifactId>hector-core</artifactId>
+      <version>1.1-4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.cassandraunit</groupId>
+      <artifactId>cassandra-unit</artifactId>
+      <version>1.2.0.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
