--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,12 @@
       </dependency>
       <dependency>
         <groupId>org.apache.sirona</groupId>
+        <artifactId>sirona-collector</artifactId>
+        <version>${project.version}</version>
+        <classifier>classes</classifier>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.sirona</groupId>
         <artifactId>sirona-aop</artifactId>
         <version>${project.version}</version>
       </dependency>
