change checkout directory for scm pub plugin
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1539966 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
   <!-- Compiler source and target JVM (see parent pom) -->
   <properties>
     <sirona.scmPubUrl>https://svn.apache.org/repos/asf/incubator/sirona/site-content/</sirona.scmPubUrl>
-    <sirona.scmPubCheckoutDirectory>${user.home}/sirona-site</sirona.scmPubCheckoutDirectory>
+    <sirona.scmPubCheckoutDirectory>${basedir}/.site-content</sirona.scmPubCheckoutDirectory>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
