moving cassandra store to server/store/cassandra + adding cassandra store doc + finishing implementing cassandra store
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1540085 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -34,5 +34,6 @@
     <module>collector</module>
     <module>reporting</module>
     <module>plugins</module>
+    <module>store</module>
   </modules>
 </project>
