--- a/server/store/cassandra/pom.xml
+++ b/server/store/cassandra/pom.xml
@@ -19,7 +19,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>sirona-store</artifactId>
+    <artifactId>sirona-collector-store</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>0.1-incubating-SNAPSHOT</version>
   </parent>
@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>sirona-cassandra</artifactId>
-  <name>Apache Sirona Incubator :: Agent :: Store :: Cassandra</name>
+  <name>Apache Sirona Incubator :: Server :: Store :: Cassandra</name>
 
   <dependencies>
     <dependency>
