--- a/agent/store/pom.xml
+++ b/agent/store/pom.xml
@@ -26,13 +26,12 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>sirona-store</artifactId>
+  <artifactId>sirona-agent-store</artifactId>
   <name>Apache Sirona Incubator :: Agent :: Store</name>
   <packaging>pom</packaging>
 
   <modules>
     <module>graphite</module>
     <module>cube</module>
-    <module>cassandra</module>
   </modules>
 </project>
