--- a/server/store/cassandra/pom.xml
+++ b/server/store/cassandra/pom.xml
@@ -52,5 +52,11 @@
       <version>1.2.0.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.lordofthejars</groupId>
+      <artifactId>nosqlunit-cassandra</artifactId>
+      <version>0.7.8</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
