--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
           <inherited>true</inherited>
         </plugin>
 
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>1.8</version>
+        </plugin>
+
       </plugins>
     </pluginManagement>
     <plugins>
