added myself in dev list
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1540942 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,16 @@
       <organization>Apache</organization>
       <timezone>+2</timezone>
     </developer>
+    <developer>
+      <id>olamy</id>
+      <name>Olivier Lamy</name>
+      <email>olamy@apache.org</email>
+      <organization>Ecetera.com.au</organization>
+      <roles>
+        <role>PMC Member</role>
+      </roles>
+      <timezone>Australia/Melbourne</timezone>
+    </developer>
   </developers>
 
   <mailingLists>
