adding some exclusion in cassandra module + fixing comparator type for gauges
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1540969 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/store/cassandra/pom.xml
+++ b/server/store/cassandra/pom.xml
@@ -34,12 +34,27 @@
       <groupId>org.apache.sirona</groupId>
       <artifactId>sirona-collector</artifactId>
       <classifier>classes</classifier>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.hectorclient</groupId>
       <artifactId>hector-core</artifactId>
       <version>1.1-4</version>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.ecyrd.speed4j</groupId>
+          <artifactId>speed4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.yammer.metrics</groupId>
+          <artifactId>metrics-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
