moving in memory collector*store impl in core to get better dependencies between modules - there was no real reason to put them in collector
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1541130 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/collector/src/test/resources/sirona.properties
+++ b/server/collector/src/test/resources/sirona.properties
@@ -14,7 +14,7 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-org.apache.sirona.store.DataStoreFactory = org.apache.sirona.collector.server.store.CollectorDataStoreFactory
+org.apache.sirona.store.DataStoreFactory = org.apache.sirona.store.CollectorDataStoreFactory
 
 org.apache.sirona.cube.CubeBuilder.collector = http://localhost:1234
 org.apache.sirona.cube.CubeBuilder.marker = local
