--- a/server/collector/src/main/resources/collector-sirona.properties
+++ b/server/collector/src/main/resources/collector-sirona.properties
@@ -16,5 +16,5 @@
 # under the License.
 
 # collector data store to aggregate data
-org.apache.sirona.store.DataStoreFactory = org.apache.sirona.collector.server.store.CollectorDataStoreFactory
+org.apache.sirona.store.DataStoreFactory = org.apache.sirona.store.CollectorDataStoreFactory
 org.apache.sirona.core.gauge.activated = false
