some more renaming to match sirona and remove as much as possible old references to [monitoring]
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1541402 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/webapp/WEB-INF/web.xml
+++ b/server/reporting/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
 
   <filter>
     <filter-name>Monitoring</filter-name>
-    <filter-class>org.apache.sirona.reporting.web.MonitoringController</filter-class>
+    <filter-class>org.apache.sirona.reporting.web.SironaController</filter-class>
   </filter>
 
   <filter-mapping>
