using /sirona instead of /monitoring by default
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1541419 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/pom.xml
+++ b/server/reporting/pom.xml
@@ -31,7 +31,7 @@
 
   <properties>
     <tomcatRunPort>8080</tomcatRunPort>
-    <tomcatRunPath>/monitoring</tomcatRunPath>
+    <tomcatRunPath>/sirona</tomcatRunPath>
   </properties>
 
   <dependencies>
