back to normal column families, super column are deprecated and compiste doesn't help us that much
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1541676 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/store/cassandra/src/test/resources/sirona.properties
+++ b/server/store/cassandra/src/test/resources/sirona.properties
@@ -15,3 +15,4 @@
 # specific language governing permissions and limitations
 # under the License.
 org.apache.sirona.cassandra.CassandraBuilder.keyspace = TestCluster
+org.apache.sirona.cassandra.CassandraBuilder.hosts = localhost:9171
