moving plugin api in its own jar + updating reporting and collector war NOTICE/LICENSE files
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1542210 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,23 @@
         <configuration>
           <archiveClasses>true</archiveClasses>
           <attachClasses>true</attachClasses>
+          <webResources>
+            <resource>
+              <directory>${project.build.directory}/classes/META-INF</directory>
+              <includes>
+                <include>LICENSE</include>
+                <include>NOTICE</include>
+                <include>DEPENDENCIES</include>
+              </includes>
+              <targetPath>META-INF</targetPath>
+              <filtering>false</filtering>
+            </resource>
+          </webResources>
+          <packagingExcludes>
+            WEB-INF/classes/META-INF/LICENSE,
+            WEB-INF/classes/META-INF/NOTICE,
+            WEB-INF/classes/META-INF/DEPENDENCIES
+          </packagingExcludes>
         </configuration>
       </plugin>
     </plugins>
