--- a/server/plugins/api/pom.xml
+++ b/server/plugins/api/pom.xml
@@ -19,19 +19,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>sirona-server</artifactId>
+    <artifactId>sirona-plugins</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>0.1-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>sirona-plugins</artifactId>
-  <name>Apache Sirona Incubator :: Server :: Plugins</name>
-  <packaging>pom</packaging>
-
-  <modules>
-    <module>tomee</module>
-    <module>api</module>
-  </modules>
+  <artifactId>sirona-plugins-api</artifactId>
+  <name>Apache Sirona Incubator :: Server :: Plugins :: API</name>
 </project>
