using SortedMap for gauges values (better to get it explicitely) + adding a basic hazelcast plugins (surely to rework, ATM not sure the agent is really needed)
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1542285 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/plugins/api/pom.xml
+++ b/server/plugins/api/pom.xml
@@ -28,4 +28,11 @@
 
   <artifactId>sirona-plugins-api</artifactId>
   <name>Apache Sirona Incubator :: Server :: Plugins :: API</name>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-core</artifactId>
+    </dependency>
+  </dependencies>
 </project>
