getting rid of a thread by gauge trying to use snapshots
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1542961 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/store/graphite/src/test/resources/sirona.properties
+++ b/agent/store/graphite/src/test/resources/sirona.properties
@@ -16,6 +16,7 @@
 # under the License.
 org.apache.sirona.store.DataStoreFactory = org.apache.sirona.graphite.GraphiteDataStoreFactory
 
+org.apache.sirona.graphite.aggregated.gauge.period = 220
 org.apache.sirona.graphite.period = 125
 
 org.apache.sirona.graphite.GraphiteBuilder.address = localhost
