--- a/server/plugins/hazelcast/agent/src/test/resources/sirona.properties
+++ b/server/plugins/hazelcast/agent/src/test/resources/sirona.properties
@@ -17,4 +17,4 @@
 org.apache.sirona.hazelcast.clusters = cluster
 org.apache.sirona.hazelcast.cluster.client = true
 org.apache.sirona.hazelcast.cluster.addresses = localhost:5702
-org.apache.sirona.hazelcast.gauge.members.period = 100
+org.apache.sirona.inmemory.gauge.period = 100
