--- a/server/plugins/tomee/agent/src/test/resources/sirona.properties
+++ b/server/plugins/tomee/agent/src/test/resources/sirona.properties
@@ -14,5 +14,5 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-org.apache.sirona.gauge.tomee.period = 100
+org.apache.sirona.inmemory.gauge.period = 100
 org.apache.sirona.periodic.status.period = 100
