--- a/agent/performance/web/src/test/resources/sirona.properties
+++ b/agent/performance/web/src/test/resources/sirona.properties
@@ -12,4 +12,4 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-org.apache.sirona.web.gauge.status.period = 150
+org.apache.sirona.inmemory.gauge.period = 150
