--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
   <!-- Compiler source and target JVM (see parent pom) -->
   <properties>
-    <sirona.scmPubUrl>https://svn.apache.org/repos/asf/incubator/sirona/site/</sirona.scmPubUrl>
+    <sirona.scmPubUrl>https://svn.apache.org/repos/asf/incubator/sirona/site/docs/${project.version}</sirona.scmPubUrl>
     <sirona.scmPubCheckoutDirectory>${basedir}/.site-content</sirona.scmPubCheckoutDirectory>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
