--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <version>0.1-incubating-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Sirona Incubator</name>
-  <url>http://sirona.incubator.apache.org</url>
+  <url>http://sirona.incubator.apache.org/docs/${project.version}</url>
   <inceptionYear>2008</inceptionYear>
   <description>
     Sirona provides a simple, lightweight toolkit to instrument java application monitoring capabilities, including
