--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.3.2</version>
+          <configuration>
+            <tagBase>https://svn.apache.org/repos/asf/incubator/sirona/tags/</tagBase>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
